FINERACT-2421: Retry external asset owner creation in case of unique constraint violation